// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChannelDrawerButton should match, full snapshot 1`] = `
<ForwardRef
  accessibilityHint="Opens the channels and teams drawer"
  accessibilityLabel="Channels and teams"
  accessibilityRole="button"
  accessible={true}
  onPress={[Function]}
  style={
    Object {
      "width": 10,
    }
  }
  testID="channel_drawer_button"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "paddingHorizontal": 10,
        },
      ]
    }
  >
    <View>
      <View
        style={
          Object {
            "height": 25,
          }
        }
      />
    </View>
  </View>
</ForwardRef>
`;

exports[`ChannelDrawerButton should match, full snapshot 2`] = `
<ForwardRef
  accessibilityHint="Opens the channels and teams drawer"
  accessibilityLabel="Channels and teams"
  accessibilityRole="button"
  accessible={true}
  onPress={[Function]}
  style={
    Object {
      "width": 55,
    }
  }
  testID="channel_drawer_button"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "paddingHorizontal": 10,
        },
      ]
    }
  >
    <View>
      <Icon
        allowFontScaling={false}
        color="#ffffff"
        name="md-menu"
        size={25}
      />
      <Badge
        containerStyle={
          Object {
            "borderColor": "#1153ab",
            "borderRadius": 14,
            "borderWidth": 2,
            "position": "absolute",
            "right": -13,
            "top": -6,
          }
        }
        count={1}
        countStyle={
          Object {
            "color": "#145dbf",
            "fontSize": 10,
            "fontWeight": "bold",
          }
        }
        extraPaddingHorizontal={10}
        minHeight={20}
        minWidth={18}
        onPress={[Function]}
        style={
          Object {
            "backgroundColor": "#ffffff",
            "height": 18,
            "padding": 3,
          }
        }
      />
    </View>
  </View>
</ForwardRef>
`;
